--- a/projets.html
+++ b/projets.html
@@ -26,9 +26,9 @@
   <div class="contact-bar">
     <span>Me contacter :</span>
     <div class="contact-links">
-      <a href="mailto:ton.email@exemple.com">📧 Email</a>
-      <a href="https://www.linkedin.com/in/ton-profil" target="_blank" rel="noopener">🔗 LinkedIn</a>
-      <a href="https://github.com/ton-github" target="_blank" rel="noopener">💻 GitHub</a>
+      <a href="mailto:celia.bocage.pro@gmail.com">📧 Email</a>
+      <a href="www.linkedin.com/in/célia-bocage-549b082ab" target="_blank" rel="noopener">🔗 LinkedIn</a>
+      <a href="https://github.com/CeliaBocage" target="_blank" rel="noopener">💻 GitHub</a>
     </div>
   </div>
 
