--- a/vie-associative.html
+++ b/vie-associative.html
@@ -33,7 +33,7 @@
   </div>
 
   <main>
-    <h1>Formations</h1>
+    <h1>Vie Associative</h1>
 
     <!-- Ici tu mets le détail de tes formations, à partir du CV -->
   </main>
