--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   </div>
 
   <main>
-    <h1>Bienvenue 👋</h1>
+    <h1>Bienvenue sur mon CV étendue 👋</h1>
     <p class="tagline">
-      Passionnée de cybersécurité, je teste et analyse des systèmes à travers des projets,
-      du pentest et des CTF. Je recherche un stage en sécurité offensive, SOC ou analyse
-      de vulnérabilités (février – juillet 2026).
+      Je m’appelle Célia Bocage et je viens de Gaillac, une petite ville du Tarn où ma curiosité s’est construite loin des filières spécialisées. Pas de NSI au lycée, pas vraiment de cadre pour découvrir l’informatique… mais une fascination persistante pour ce domaine et l’intuition que la cybersécurité ou l’IA seraient des univers où je pourrais m’épanouir.
+	  J’ai donc décidé de tenter un vrai coup de poker : me lancer dans une voie que je connaissais à peine, uniquement guidée par l’envie d’apprendre et de comprendre comment les systèmes fonctionnent, se protègent ou se détournent. Aujourd’hui, aucun regret. Ce choix un peu audacieux est devenu une passion et une manière d’aborder chaque projet avec enthousiasme, rigueur et envie de progresser.
+	  Je recherche actuellement un stage de fevrier a juillet 2026 dans les domaines suivants.	
     </p>
 
     <div class="chips">
