--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 	  J’ai donc décidé de tenter un vrai coup de poker : me lancer dans une voie que je connaissais à peine, uniquement guidée par l’envie d’apprendre et de comprendre comment les systèmes fonctionnent, se protègent ou se détournent. Aujourd’hui, aucun regret. Ce choix un peu audacieux est devenu une passion et une manière d’aborder chaque projet avec enthousiasme, rigueur et envie de progresser.
 	  Je recherche actuellement un stage de fevrier a juillet 2026 dans les domaines suivants.	
     </p>
+    <p class="tagline">
+	  J’ai donc décidé de tenter un vrai coup de poker : me lancer dans une voie que je connaissais à peine, uniquement guidée par l’envie d’apprendre et de comprendre comment les systèmes fonctionnent, se protègent ou se détournent. Aujourd’hui, aucun regret. Ce choix un peu audacieux est devenu une passion et une manière d’aborder chaque projet avec enthousiasme, rigueur et envie de progresser.
+	  Je recherche actuellement un stage de fevrier a juillet 2026 dans les domaines suivants.	
+    </p>
+    <p class="tagline">
+	  Je recherche actuellement un stage de fevrier a juillet 2026 dans les domaines suivants.	
+    </p>
 
     <div class="chips">
       <span class="chip">Cybersécurité</span>
