--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
     <h1>Bienvenue sur mon CV étendue 👋</h1>
     <p class="tagline">
       Je m’appelle Célia Bocage et je viens de Gaillac, une petite ville du Tarn où ma curiosité s’est construite loin des filières spécialisées. Pas de NSI au lycée, pas vraiment de cadre pour découvrir l’informatique… mais une fascination persistante pour ce domaine et l’intuition que la cybersécurité ou l’IA seraient des univers où je pourrais m’épanouir.
-	  J’ai donc décidé de tenter un vrai coup de poker : me lancer dans une voie que je connaissais à peine, uniquement guidée par l’envie d’apprendre et de comprendre comment les systèmes fonctionnent, se protègent ou se détournent. Aujourd’hui, aucun regret. Ce choix un peu audacieux est devenu une passion et une manière d’aborder chaque projet avec enthousiasme, rigueur et envie de progresser.
-	  Je recherche actuellement un stage de fevrier a juillet 2026 dans les domaines suivants.	
-    </p>
     <p class="tagline">
 	  J’ai donc décidé de tenter un vrai coup de poker : me lancer dans une voie que je connaissais à peine, uniquement guidée par l’envie d’apprendre et de comprendre comment les systèmes fonctionnent, se protègent ou se détournent. Aujourd’hui, aucun regret. Ce choix un peu audacieux est devenu une passion et une manière d’aborder chaque projet avec enthousiasme, rigueur et envie de progresser.
 	  Je recherche actuellement un stage de fevrier a juillet 2026 dans les domaines suivants.	
@@ -50,21 +47,23 @@
 
     <div class="chips">
       <span class="chip">Cybersécurité</span>
-      <span class="chip">Sécurité offensive</span>
+      <span class="chip">Pentest / Sécurité offensive</span>
       <span class="chip">SOC</span>
       <span class="chip">Analyse de vulnérabilités</span>
       <span class="chip">Data & Machine Learning</span>
+	  <span class="chip">Cloud Security</span>
+	  <span class="chip">Forensics</span>
     </div>
 
     <h2>Découvrir mon profil</h2>
     <p>Ce site complète mon CV et présente plus en détail mon parcours :</p>
-    <ul class="section-list">
-      <li><a href="formations.html">Formations</a> – EPITA, semestre à l’étranger, diplômes…</li>
-      <li><a href="experiences.html">Expériences professionnelles</a> – data science, hôtellerie, pharmacie…</li>
-      <li><a href="projets.html">Projets</a> – CTF & cybersécurité, jeux vidéo, OCR, recettes…</li>
-      <li><a href="vie-associative.html">Vie associative</a> – Staff’ Communication, La Cave, scoutisme…</li>
-      <li><a href="passions.html">Passions</a> – lecture, sport, culture, etc.</li>
-    </ul>
+    <div class="cards-container">
+
+  	  <a href="formations.html" class="profile-card">
+    	<div class="card-bg" style="background-image: url('images/formations.jpg');"></div>
+    	<h3>Formations</h3>
+    	<p>EPITA, semestre à l’étranger, diplômes…</p>
+ 	  </a>
   </main>
 
   <footer>
