--- a/index.html
+++ b/index.html
@@ -32,48 +32,116 @@
       <a href="https://github.com/CeliaBocage" target="_blank" rel="noopener">💻 GitHub</a>
     </div>
   </div>
+<main>
+    <section class="cv-section presentation">
+        <p class="tagline">
+            Passionnée de cybersécurité, j'analyse et teste des systèmes via des projets, du pentest et des CTF. Active sur TryHackMe et HackTheBox, je recherche un stage en sécurité offensive, SOC ou analyse de vulnérabilités.
+        </p>
 
-  <main>
-    <h1>Bienvenue sur mon CV étendue 👋</h1>
-    <p class="tagline">
-      Je m’appelle Célia Bocage et je viens de Gaillac, une petite ville du Tarn où ma curiosité s’est construite loin des filières spécialisées. Pas de NSI au lycée, pas vraiment de cadre pour découvrir l’informatique… mais une fascination persistante pour ce domaine et l’intuition que la cybersécurité ou l’IA seraient des univers où je pourrais m’épanouir.
-    <p class="tagline">
-	  J’ai donc décidé de tenter un vrai coup de poker : me lancer dans une voie que je connaissais à peine, uniquement guidée par l’envie d’apprendre et de comprendre comment les systèmes fonctionnent, se protègent ou se détournent. Aujourd’hui, aucun regret. Ce choix un peu audacieux est devenu une passion et une manière d’aborder chaque projet avec enthousiasme, rigueur et envie de progresser.
-	  Je recherche actuellement un stage de fevrier a juillet 2026 dans les domaines suivants.	
-    </p>
-    <p class="tagline">
-	  Je recherche actuellement un stage de fevrier a juillet 2026 dans les domaines suivants.	
-    </p>
+        <h2>Objectif Professionnel</h2>
+        <p>
+            Je recherche actuellement un **stage de février à juillet 2026** dans les domaines suivants :
+        </p>
+        <div class="chips">
+            <span class="chip">Cybersécurité</span>
+            <span class="chip">Pentest / Sécurité offensive</span>
+            <span class="chip">SOC</span>
+            <span class="chip">Analyse de vulnérabilités</span>
+            <span class="chip">Data & Machine Learning</span>
+            <span class="chip">Cloud Security</span>
+            <span class="chip">Forensics</span>
+        </div>
+    </section>
 
-    <div class="chips">
-      <span class="chip">Cybersécurité</span>
-      <span class="chip">Pentest / Sécurité offensive</span>
-      <span class="chip">SOC</span>
-      <span class="chip">Analyse de vulnérabilités</span>
-      <span class="chip">Data & Machine Learning</span>
-	  <span class="chip">Cloud Security</span>
-	  <span class="chip">Forensics</span>
-    </div>
-
-    <h2>Découvrir mon profil</h2>
+    <h2>Mon Profil Détaillé</h2>
     <p>Ce site complète mon CV et présente plus en détail mon parcours :</p>
     <div class="cards-container">
 
-  	  <a href="formations.html" class="profile-card">
-    	<div class="card-bg" style="background-image: url('images/formations.jpg');"></div>
-    	<h3>Formations</h3>
-    	<p>EPITA, semestre à l’étranger, diplômes…</p>
- 	  </a>
-  </main>
+        <a href="formations.html" class="profile-card">
+            <div class="card-bg" style="background-image: url('images/formations.jpg');"></div>
+            <h3>Formations</h3>
+            <ul>
+                <li>**3ème année en école d'ingénieurs informatique - EPITA - Villejuif** (2023-...)</li>
+                <li>Semestre à l'étranger - Game Design - ATU, Irlande (2025)</li>
+                <li>BAFA (2024)</li>
+            </ul>
+        </a>
 
-  <footer>
-    © <span id="year"></span> Célia Bocage
-  </footer>
-</div>
+        <a href="experiences.html" class="profile-card">
+            <div class="card-bg" style="background-image: url('images/experiences.jpg');"></div>
+            <h3>Expériences Professionnelles</h3>
+            <ul>
+                <li>**Stage Data Science** - ArtMajeur, Levallois-Perret (Sept. 2025 - Janv. 2026)</li>
+                <li>**Employée de rayon (saisonnier)** - Intermarché, Piquerouge, Gaillac (2022, 2024, 2025)</li>
+            </ul>
+        </a>
 
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-</script>
-</body>
-</html>
+        <a href="projets.html" class="profile-card">
+            <div class="card-bg" style="background-image: url('images/projets.jpg');"></div>
+            <h3>Projets Techniques</h3>
+            <ul>
+                <li>**Projet jeu vidéo** (C#, Godot, Blender)</li>
+                <li>**Logiciel de résolution de mots cachés (OCR)** (C, ML, Analyse d'Image)</li>
+                <li>**Projet logiciel de recettes de cuisine** (C#, SQL, LinQ)</li>
+            </ul>
+        </a>
 
+        <a href="vie-associative.html" class="profile-card">
+            <div class="card-bg" style="background-image: url('images/vie-associative.jpg');"></div>
+            <h3>Vie Associative</h3>
+            <ul>
+                <li>**Staff' Communication - EPITA** (2025-...)</li>
+                <li>**Animatrice (Bénévolat)** - Scout et Guide de France (2023-...)</li>
+            </ul>
+        </a>
+
+        <div class="profile-card static-card">
+            <div class="card-bg" style="background-image: url('images/competences.jpg');"></div>
+            <h3>Compétences</h3>
+            <div class="chips-list">
+                <h4>Langages & Outils</h4>
+                <div class="chips small">
+                    <span class="chip">Python</span>
+                    <span class="chip">C#</span>
+                    <span class="chip">SQL</span>
+                    <span class="chip">HTML</span>
+                    <span class="chip">C</span>
+                    <span class="chip">Assembly</span>
+                    <span class="chip">JavaScript</span>
+                    <span class="chip">Vim / Neovim</span>
+                </div>
+            </div>
+            <div class="chips-list">
+                <h4>Soft Skills</h4>
+                <div class="chips small">
+                    <span class="chip">Communication</span>
+                    <span class="chip">Adaptation</span>
+                    <span class="chip">Autonomie</span>
+                    <span class="chip">Leadership</span>
+                    <span class="chip">Organisation</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="profile-card static-card">
+            <div class="card-bg" style="background-image: url('images/langues.jpg');"></div>
+            <h3>Langues</h3>
+            <ul>
+                <li>**Français** (Langue maternelle)</li>
+                <li>**Anglais** (Courant - 6 mois en Irlande, TOEIC, TOEFL)</li>
+                <li>**Espagnol** (Intermédiaire)</li>
+                <li>**Italien** (Notions)</li>
+            </ul>
+        </div>
+
+        <a href="passions.html" class="profile-card">
+            <div class="card-bg" style="background-image: url('images/passions.jpg');"></div>
+            <h3>Passions</h3>
+            <ul>
+                <li>**Cybersécurité** (TryHackMe, HackTheBox, RootMe)</li>
+                <li>Photographie, Voyage, Rugby, Œnologie, Surf</li>
+            </ul>
+        </a>
+
+    </div>
+</main>
