--- a/index.html
+++ b/index.html
@@ -52,83 +52,83 @@
 
             <h2>CONTACT</h2>
             <ul class="contact-block">
-                [cite_start]<li><span class="contact-icon">📞</span> 06 37 00 10 32 [cite: 8]</li>
-                [cite_start]<li><span class="contact-icon">📧</span> celia.bocage.pro@gmail.com [cite: 9]</li>
-                [cite_start]<li><span class="contact-icon">📧</span> celia.bocage@epita.fr [cite: 9]</li>
-                [cite_start]<li><span class="contact-icon">📍</span> 94270 Le Kremlin-Bicêtre [cite: 10]</li>
-                [cite_start]<li><span class="contact-icon">🔗</span> <a href="www.linkedin.com/in/célia-bocage-549b082ab" target="_blank">LinkedIn: Celia Bocage</a> [cite: 11]</li>
+                <li><span class="contact-icon">📞</span> 06 37 00 10 32</li>
+				<li><span class="contact-icon">📧</span> celia.bocage.pro@gmail.com</li>
+                <li><span class="contact-icon">📧</span> celia.bocage@epita.fr</li>
+                <li><span class="contact-icon">📍</span> 94270 Le Kremlin-Bicêtre</li>
+                <li><span class="contact-icon">🔗</span> <a href="www.linkedin.com/in/célia-bocage-549b082ab" target="_blank">LinkedIn: Celia Bocage</a></li>
             </ul>
 
-            [cite_start]<h2>COMPÉTENCES [cite: 12]</h2>
+            <h2>COMPÉTENCES</h2>
 
             <div class="chips-list">
-                [cite_start]<h4>LANGAGES [cite: 13]</h4>
+                <h4>LANGAGES </h4>
                 <div class="chips">
-                    [cite_start]<span class="chip">Python</span> [cite: 14][cite_start]<span class="chip">C#</span> [cite: 15][cite_start]<span class="chip">SQL</span> [cite: 16]
-                    [cite_start]<span class="chip">HTML</span> [cite: 17][cite_start]<span class="chip">C</span> [cite: 18][cite_start]<span class="chip">Assembly</span> [cite: 36]
-                    [cite_start]<span class="chip">JavaScript</span> [cite: 36]
+                    <span class="chip">Python</span> <span class="chip">C#</span> <span class="chip">SQL</span> 
+                    <span class="chip">HTML</span> <span class="chip">C</span> <span class="chip">Assembly</span> 
+                    <span class="chip">JavaScript</span> 
                 </div>
             </div>
 
             <div class="chips-list">
-                [cite_start]<h4>OUTILS [cite: 37]</h4>
+                <h4>OUTILS </h4>
                 <div class="chips">
-                    [cite_start]<span class="chip">Vim / Neovim</span> [cite: 39][cite_start]<span class="chip">VSCode</span> [cite: 39][cite_start]<span class="chip">Cursor</span> [cite: 39]
-                    [cite_start]<span class="chip">Godot</span> [cite: 60][cite_start]<span class="chip">Blender</span> [cite: 60]
+                    <span class="chip">Vim / Neovim</span> <span class="chip">VSCode</span> <span class="chip">Cursor</span> 
+                    <span class="chip">Godot</span> <span class="chip">Blender</span> 
                 </div>
             </div>
 
             <div class="chips-list">
-                [cite_start]<h4>SYSTÈMES [cite: 40]</h4>
+                <h4>SYSTÈMES </h4>
                 <div class="chips">
-                    [cite_start]<span class="chip">Linux</span> [cite: 41][cite_start]<span class="chip">Windows</span> [cite: 41]
+                    <span class="chip">Linux</span> <span class="chip">Windows</span> 
                 </div>
             </div>
 
             <div class="chips-list">
-                [cite_start]<h4>SOFT SKILLS [cite: 42]</h4>
+                <h4>SOFT SKILLS </h4>
                 <div class="chips">
-                    [cite_start]<span class="chip">Communication</span> [cite: 43][cite_start]<span class="chip">Adaptation</span> [cite: 43][cite_start]<span class="chip">Autonomie</span> [cite: 43]
-                    [cite_start]<span class="chip">Leadership</span> [cite: 44][cite_start]<span class="chip">Organisation</span> [cite: 44][cite_start]<span class="chip">Dynamisme</span> [cite: 44]
+                    <span class="chip">Communication</span> <span class="chip">Adaptation</span> <span class="chip">Autonomie</span> 
+                    <span class="chip">Leadership</span> <span class="chip">Organisation</span> <span class="chip">Dynamisme</span> 
                 </div>
             </div>
 
-            [cite_start]<h2>LANGUES [cite: 45]</h2>
+            <h2>LANGUES </h2>
             <ul class="cv-list contact-block">
-                [cite_start]<li>**Français** (Langue maternelle) [cite: 46]</li>
-                [cite_start]<li>**Anglais** (Courant - 6 mois en Irlande, TOEIC, TOEFFL) [cite: 47, 48]</li>
-                [cite_start]<li>**Espagnol** (Intermédiaire) [cite: 49]</li>
-                [cite_start]<li>**Notions d'Italien** [cite: 51]</li>
+                <li>**Français** (Langue maternelle) </li>
+                <li>**Anglais** (Courant - 6 mois en Irlande, TOEIC, TOEFFL)  48]</li>
+                <li>**Espagnol** (Intermédiaire) </li>
+                <li>**Notions d'Italien** </li>
             </ul>
 
-            [cite_start]<h2><a href="projets.html">PROJETS</a> [cite: 38]</h2>
+            <h2><a href="projets.html">PROJETS</a> </h2>
             <ul class="cv-list contact-block">
-                [cite_start]<li>**Projet jeu vidéo** (2e semestre EPITA) [cite: 58]</li>
-                [cite_start]<li>**Logiciel de résolution de mots cachés** (OCR, 3e semestre EPITA) [cite: 61]</li>
-                [cite_start]<li>**Projet logiciel de recettes de cuisine** (ATU Sligo) [cite: 64]</li>
+                <li>**Projet jeu vidéo** (2e semestre EPITA) </li>
+                <li>**Logiciel de résolution de mots cachés** (OCR, 3e semestre EPITA) </li>
+                <li>**Projet logiciel de recettes de cuisine** (ATU Sligo) </li>
             </ul>
 
-            [cite_start]<h2><a href="passions.html">PASSIONS</a> [cite: 50]</h2>
+            <h2><a href="passions.html">PASSIONS</a> </h2>
             <ul class="cv-list contact-block">
-                [cite_start]<li>Apprentissage autonome de la **cybersécurité** [cite: 54]</li>
-                [cite_start]<li style="margin-left: 1rem; list-style: none;">(TryHackMe [cite: 55][cite_start], HackTheBox [cite: 56][cite_start], RootMe [cite: 57][cite_start], HackThisSite [cite: 57])</li>
-                [cite_start]<li>Photographie, Voyage, Rugby, Œnologie, Surf [cite: 52, 53]</li>
+                <li>Apprentissage autonome de la **cybersécurité** </li>
+                <li style="margin-left: 1rem; list-style: none;">(TryHackMe , HackTheBox , RootMe , HackThisSite )</li>
+                <li>Photographie, Voyage, Rugby, Œnologie, Surf  53]</li>
             </ul>
         </div>
 
         <div class="cv-main-content">
 
-            [cite_start]<h2><a href="formations.html">FORMATIONS</a> [cite: 4]</h2>
+            <h2><a href="formations.html">FORMATIONS</a> /h2>
 
             <section class="cv-item">
                 <h3>3eme année en école d'ingénieurs informatique - EPITA</h3>
                 <div class="item-details">
                     <span class="location">Villejuif</span>
-                    [cite_start]<span class="date">2023- [cite: 19]</span>
+                    <span class="date">2023- </span>
                 </div>
                 <ul>
-                    [cite_start]<li>Cours principaux : Algorithmique, Mathématique [cite: 19]</li>
-                    [cite_start]<li>Semestre à l'étranger : Game Design - ATU, Irlande [cite: 19]</li>
+                    <li>Cours principaux : Algorithmique, Mathématique </li>
+                    <li>Semestre à l'étranger : Game Design - ATU, Irlande </li>
                 </ul>
             </section>
 
@@ -136,10 +136,10 @@
                 <h3>BAFA</h3>
                 <div class="item-details">
                     <span class="location"></span>
-                    [cite_start]<span class="date">2024 [cite: 19]</span>
+                    <span class="date">2024 </span>
                 </div>
                 <ul>
-                    [cite_start]<li>Spécialisation accueil de scoutisme [cite: 19]</li>
+                    <li>Spécialisation accueil de scoutisme </li>
                 </ul>
             </section>
 
@@ -147,25 +147,25 @@
                 <h3>BAC Général - Collège-Lycée St Joseph</h3>
                 <div class="item-details">
                     <span class="location">Gaillac</span>
-                    [cite_start]<span class="date">2023 [cite: 19]</span>
+                    <span class="date">2023 </span>
                 </div>
                 <ul>
-                    [cite_start]<li>Spécialités Mathématiques, Physique-chimie [cite: 20]</li>
+                    <li>Spécialités Mathématiques, Physique-chimie </li>
                 </ul>
             </section>
 
-            [cite_start]<h2><a href="experiences.html">EXPÉRIENCE PROFESSIONNELLE</a> [cite: 21]</h2>
+            <h2><a href="experiences.html">EXPÉRIENCE PROFESSIONNELLE</a> </h2>
 
             <section class="cv-item">
                 <h3>Stage Data Science - ArtMajeur</h3>
                 <div class="item-details">
                     <span class="location">Levallois-Perret</span>
-                    <span class="date">Sept. 2025 - Janv. [cite_start]2026 [cite: 22]</span>
+                    <span class="date">Sept. 2025 - Janv. 2026 </span>
                 </div>
                 <ul>
-                    [cite_start]<li>Analyse data & comportements : SQL, Python, statistiques. [cite: 22]</li>
-                    [cite_start]<li>Modélisation & sémantique : classification, BERT. [cite: 23]</li>
-                    [cite_start]<li>Visualisation & impact : dashboards, rapports, optimisation data-driven. [cite: 24]</li>
+                    <li>Analyse data & comportements : SQL, Python, statistiques. </li>
+                    <li>Modélisation & sémantique : classification, BERT. </li>
+                    <li>Visualisation & impact : dashboards, rapports, optimisation data-driven. </li>
                 </ul>
             </section>
 
@@ -173,11 +173,11 @@
                 <h3>Commis de salle - Hôtel Eldorado, 4*</h3>
                 <div class="item-details">
                     <span class="location">Paris 18</span>
-                    [cite_start]<span class="date">Mai-Juillet 2025 [cite: 25]</span>
+                    <span class="date">Mai-Juillet 2025 </span>
                 </div>
                 <ul>
-                    [cite_start]<li>Mise en place autonome[cite: 26], polyvalence.</li>
-                    [cite_start]<li>Adaptabilité dans un environnement dynamique[cite: 27].</li>
+                    <li>Mise en place autonome, polyvalence.</li>
+                    <li>Adaptabilité dans un environnement dynamique.</li>
                 </ul>
             </section>
 
@@ -185,25 +185,25 @@
                 <h3>Réceptionniste - Pharmacie de Piquerouge</h3>
                 <div class="item-details">
                     <span class="location">Gaillac</span>
-                    [cite_start]<span class="date">Mai-Aout 2022 & Juillet-Aout 2024 [cite: 29, 30, 31]</span>
+                    <span class="date">Mai-Aout 2022 & Juillet-Aout 2024  30, 31]</span>
                 </div>
                 <ul>
-                    [cite_start]<li>Réception, gestion de stock et mise en rayon des produits[cite: 31].</li>
-                    [cite_start]<li>Rigueur et rapidité d'exécution[cite: 32].</li>
+                    <li>Réception, gestion de stock et mise en rayon des produits.</li>
+                    <li>Rigueur et rapidité d'exécution.</li>
                 </ul>
             </section>
 
-            [cite_start]<h2><a href="vie-associative.html">VIE ASSOCIATIVE</a> [cite: 67]</h2>
+            <h2><a href="vie-associative.html">VIE ASSOCIATIVE</a> </h2>
 
             <section class="cv-item">
                 <h3>Animatrice (Bénévolat) - Scout et Guide de France</h3>
                 <div class="item-details">
                     <span class="location"></span>
-                    [cite_start]<span class="date">2023- [cite: 34]</span>
+                    <span class="date">2023- </span>
                 </div>
                 <ul>
-                    [cite_start]<li>Encadrement de groupes d'enfants et animation d'activités éducatives. [cite: 35]</li>
-                    [cite_start]<li>Garantie de la sécurité et accompagnement du développement global (affectif, intellectuel, social) [cite: 35]</li>
+                    <li>Encadrement de groupes d'enfants et animation d'activités éducatives. </li>
+                    <li>Garantie de la sécurité et accompagnement du développement global (affectif, intellectuel, social) </li>
                 </ul>
             </section>
 
@@ -211,11 +211,11 @@
                 <h3>Staff' Communication - EPITA</h3>
                 <div class="item-details">
                     <span class="location"></span>
-                    [cite_start]<span class="date">2025- [cite: 71]</span>
+                    <span class="date">2025- </span>
                 </div>
                 <ul>
-                    [cite_start]<li>Encadrement d'étudiants lors d'événement de communication. [cite: 69]</li>
-                    [cite_start]<li>Représentation de l'école sur les salons et JPO. [cite: 70]</li>
+                    <li>Encadrement d'étudiants lors d'événement de communication. </li>
+                    <li>Représentation de l'école sur les salons et JPO. </li>
                 </ul>
             </section>
 
@@ -223,11 +223,11 @@
                 <h3>Membre de La cave - Association de vins et de produits du terroir français</h3>
                 <div class="item-details">
                     <span class="location"></span>
-                    [cite_start]<span class="date">2024 [cite: 72]</span>
+                    <span class="date">2024 </span>
                 </div>
                 <ul>
-                    [cite_start]<li>Organisation de dégustation de vin et de fromage. [cite: 73]</li>
-                    [cite_start]<li>Organisation de visite de Cave et de Fermes. [cite: 73]</li>
+                    <li>Organisation de dégustation de vin et de fromage. </li>
+                    <li>Organisation de visite de Cave et de Fermes. </li>
                 </ul>
             </section>
         </div>
