--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <h2>CONTACT</h2>
             <ul class="contact-block">
                 <li><span class="contact-icon">📞</span> 06 37 00 10 32</li>
-				<li><span class="contact-icon">📧</span> celia.bocage.pro@gmail.com</li>
-                <li><span class="contact-icon">📧</span> celia.bocage@epita.fr</li>
+				<li><span class="contact-icon">📧</span> <a href="mailto:celia.bocage.pro@gmail.com"></a>celia.bocage.pro@gmail.com</li>
                 <li><span class="contact-icon">📍</span> 94270 Le Kremlin-Bicêtre</li>
                 <li><span class="contact-icon">🔗</span> <a href="www.linkedin.com/in/célia-bocage-549b082ab" target="_blank">LinkedIn: Celia Bocage</a></li>
+                <li><span class="contact-icon">💻</span> <a href="https://github.com/CeliaBocage" target="_blank">GitHub: CeliaBocage</a></li>
             </ul>
 
             <h2>COMPÉTENCES</h2>
@@ -135,7 +135,7 @@
             <section class="cv-item">
                 <h3>BAFA</h3>
                 <div class="item-details">
-                    <span class="location"></span>
+                    <span class="location">Gaillac</span>
                     <span class="date">2024 </span>
                 </div>
                 <ul>
