--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p class="tagline cv-title-info">Étudiante à l'EΡITA | Recherche d'stage en cybersécurité (fev. - juil. 2026)</p>
 
     <section style="margin-bottom: 2rem;">
-        <p>
+        <p style="color: #222;">
             Passionnée de cybersécurité, j'analyse et teste des systèmes via des projets, du pentest et des CTF.
             Active sur TryHackMe et HackTheBox, je recherche un stage en sécurité offensive, SOC ou analyse de vulnérabilités.
         </p>
@@ -110,9 +110,7 @@
 
         <div class="cv-main-content">
 
-            <h2><a href="formations.html">FORMATIONS</a> /h2>
-
-            <section class="cv-item">
+            <h2><a href="formations.html">FORMATIONS</a></h2> <section class="cv-item">
                 <h3>3eme année en école d'ingénieurs informatique - EPITA</h3>
                 <div class="item-details">
                     <span class="location">Villejuif</span>
@@ -225,3 +223,5 @@
         </div>
     </div>
 </main>
+</div> </body>
+</html>
