--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       </ul>
     </nav>
   </header>
-</div>
 
 <main>
     <h1>CÉLIA BOCAGE</h1>
@@ -87,22 +86,22 @@
 
             <h2>LANGUES </h2>
             <ul class="cv-list contact-block">
-                <li>**Français** (Langue maternelle) </li>
-                <li>**Anglais** (Courant - 6 mois en Irlande, TOEIC, TOEFFL)  48]</li>
-                <li>**Espagnol** (Intermédiaire) </li>
-                <li>**Notions d'Italien** </li>
+                <li>Français (Langue maternelle) </li>
+                <li>Anglais (Courant - 6 mois en Irlande, TOEIC, TOEFFL)  48]</li>
+                <li>Espagnol (Intermédiaire) </li>
+                <li>Notions d'Italien </li>
             </ul>
 
             <h2><a href="projets.html">PROJETS</a> </h2>
             <ul class="cv-list contact-block">
-                <li>**Projet jeu vidéo** (2e semestre EPITA) </li>
-                <li>**Logiciel de résolution de mots cachés** (OCR, 3e semestre EPITA) </li>
-                <li>**Projet logiciel de recettes de cuisine** (ATU Sligo) </li>
+                <li>Projet jeu vidéo (2e semestre EPITA) </li>
+                <li>Logiciel de résolution de mots cachés (OCR, 3e semestre EPITA) </li>
+                <li>Projet logiciel de recettes de cuisine (ATU Sligo) </li>
             </ul>
 
             <h2><a href="passions.html">PASSIONS</a> </h2>
             <ul class="cv-list contact-block">
-                <li>Apprentissage autonome de la **cybersécurité** </li>
+                <li>Apprentissage autonome de la cybersécurité </li>
                 <li style="margin-left: 1rem; list-style: none;">(TryHackMe , HackTheBox , RootMe , HackThisSite )</li>
                 <li>Photographie, Voyage, Rugby, Œnologie, Surf  53]</li>
             </ul>
@@ -150,7 +149,7 @@
                 <h3>Stage Data Science - ArtMajeur</h3>
                 <div class="item-details">
                     <span class="location">Levallois-Perret</span>
-                    <span class="date">Sept. 2025 - Janv. 2026 </span>
+                    <span class="date">4 mois</span>
                 </div>
                 <ul>
                     <li>Analyse data & comportements : SQL, Python, statistiques. </li>
@@ -163,7 +162,7 @@
                 <h3>Commis de salle - Hôtel Eldorado, 4*</h3>
                 <div class="item-details">
                     <span class="location">Paris 18</span>
-                    <span class="date">Mai-Juillet 2025 </span>
+                    <span class="date">3 mois</span>
                 </div>
                 <ul>
                     <li>Mise en place autonome, polyvalence.</li>
@@ -175,7 +174,7 @@
                 <h3>Réceptionniste - Pharmacie de Piquerouge</h3>
                 <div class="item-details">
                     <span class="location">Gaillac</span>
-                    <span class="date">Mai-Aout 2022 & Juillet-Aout 2024  30, 31]</span>
+                    <span class="date">7 mois</span>
                 </div>
                 <ul>
                     <li>Réception, gestion de stock et mise en rayon des produits.</li>
@@ -213,7 +212,7 @@
                 <h3>Membre de La cave - Association de vins et de produits du terroir français</h3>
                 <div class="item-details">
                     <span class="location"></span>
-                    <span class="date">2024 </span>
+                    <span class="date">2024- </span>
                 </div>
                 <ul>
                     <li>Organisation de dégustation de vin et de fromage. </li>
@@ -223,5 +222,9 @@
         </div>
     </div>
 </main>
+
+<footer>
+  <p>&copy; 2025 Célia Bocage - Tous droits réservés.</p>
+</footer>
 </div> </body>
 </html>
