--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                 <li>Notions d'Italien </li>
             </ul>
 
-            <h2><a href="projets.html">PROJETS</a> </h2>
+            <h2><a href="projets.html" style="color: #53ffc3;">PROJETS</a> </h2>
             <ul class="cv-list contact-block">
                 <li>Projet jeu vidéo (2e semestre EPITA) </li>
                 <li>Logiciel de résolution de mots cachés (OCR, 3e semestre EPITA) </li>
                 <li>Projet logiciel de recettes de cuisine (ATU Sligo) </li>
             </ul>
 
-            <h2><a href="passions.html">PASSIONS</a> </h2>
+            <h2><a href="passions.html" style="color: #53ffc3;"></a>>PASSIONS</a> </h2>
             <ul class="cv-list contact-block">
                 <li>Apprentissage autonome de la cybersécurité </li>
                 <li style="margin-left: 1rem; list-style: none;">(TryHackMe , HackTheBox , RootMe , HackThisSite )</li>
