--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header>
     <div class="logo">Célia Bocage</div>
     <div class="subtitle">Étudiante en ingénierie informatique – EPITA</div>
+    <p class="tagline"> N'hésitez pas a cliquer sur les experiences ou les projets pour en savoir plus</p>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
