--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo">Célia Bocage</div>
     <div class="subtitle">Étudiante en ingénierie informatique – EPITA</div>
-    <p class="tagline"> N'hésitez pas a cliquer sur les experiences ou les projets pour en savoir plus</p>
+    <p class="tagline" style="color: aliceblue;"> N'hésitez pas a cliquer sur les experiences ou les projets pour en savoir plus</p>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
@@ -92,13 +92,7 @@
                 <li>Notions d'Italien </li>
             </ul>
 
-            <h2><a href="projets.html" style="color: #66c7f4;">PROJETS</a> </h2>
-            <ul class="cv-list contact-block">
-                <li>Projet jeu vidéo (2e semestre EPITA) </li>
-                <li>Logiciel de résolution de mots cachés (OCR, 3e semestre EPITA) </li>
-                <li>Projet logiciel de recettes de cuisine (ATU Sligo) </li>
-            </ul>
-
+            
             <h2><a href="passions.html" style="color: #66c7f4;">PASSIONS</a> </h2>
             <ul class="cv-list contact-block">
                 <li>Apprentissage autonome de la cybersécurité </li>
@@ -110,13 +104,13 @@
         <div class="cv-main-content">
 
             <h2><a href="formations.html">FORMATIONS</a></h2> <section class="cv-item">
-                <h3>3eme année en école d'ingénieurs informatique - EPITA</h3>
+                <h3>3eme année en école d'ingénieurs <strong> informatique </strong> - EPITA</h3>
                 <div class="item-details">
                     <span class="location">Villejuif</span>
                     <span class="date">2023- </span>
                 </div>
                 <ul>
-                    <li>Cours principaux : Algorithmique, Mathématique </li>
+                    <li>Cours principaux : Algorithmique, Mathématiques </li>
                     <li>Semestre à l'étranger : Game Design - ATU, Irlande </li>
                 </ul>
             </section>
@@ -133,7 +127,7 @@
             </section>
 
             <section class="cv-item">
-                <h3>BAC Général - Collège-Lycée St Joseph</h3>
+                <h3>BACCALAURÉAT Général - Collège-Lycée St Joseph</h3>
                 <div class="item-details">
                     <span class="location">Gaillac</span>
                     <span class="date">2023 </span>
@@ -142,7 +136,38 @@
                     <li>Spécialités Mathématiques, Physique-chimie </li>
                 </ul>
             </section>
-
+            
+            <h2><a href="projets.html">PROJETS</a> </h2>
+            <section class="cv-item">
+                <h3>Projet jeu vidéo</h3>
+                <div class="item-details">
+                    <span class="location">EPITA</span>
+                    <span class="date">2e semestre</span>
+                </div>
+                <ul>
+                    <li>Projet jeu vidéo (2e semestre EPITA)</li>
+                </ul>
+            </section>
+            <section class="cv-item">
+                <h3>Logiciel de résolution de mots cachés (OCR)</h3>
+                <div class="item-details">
+                    <span class="location">EPITA</span>
+                    <span class="date">3e semestre</span>
+                </div>
+                <ul>
+                    <li>Logiciel de résolution de mots cachés (OCR, 3e semestre EPITA)</li>
+                </ul>
+            </section>
+            <section class="cv-item">
+                <h3>Projet logiciel de recettes de cuisine</h3>
+                <div class="item-details">
+                    <span class="location">ATU Sligo, Irlande</span>
+                    <span class="date">Semestre à l'étranger</span>
+                </div>
+                <ul>
+                    <li>Projet logiciel de recettes de cuisine (ATU Sligo)</li>
+                </ul>
+            </section>
             <h2><a href="experiences.html">EXPÉRIENCE PROFESSIONNELLE</a> </h2>
 
             <section class="cv-item">
@@ -152,9 +177,9 @@
                     <span class="date">4 mois</span>
                 </div>
                 <ul>
-                    <li>Analyse data & comportements : SQL, Python, statistiques. </li>
-                    <li>Modélisation & sémantique : classification, BERT. </li>
-                    <li>Visualisation & impact : dashboards, rapports, optimisation data-driven. </li>
+                    <li><strong> Analyse data & comportements</strong> : SQL, Python, statistiques. </li>
+                    <li> <strong> Mélisation </strong>& sémantique : classification, BERT. </li>
+                    <li>Visualisation & impact : dashboards, rapports, <strong>optimisation data-driven.</strong> </li>
                 </ul>
             </section>
 
@@ -165,7 +190,7 @@
                     <span class="date">3 mois</span>
                 </div>
                 <ul>
-                    <li>Mise en place autonome, polyvalence.</li>
+                    <li>Mise en place <strong>autonome </strong>, polyvalence.</li>
                     <li>Adaptabilité dans un environnement dynamique.</li>
                 </ul>
             </section>
@@ -178,7 +203,7 @@
                 </div>
                 <ul>
                     <li>Réception, gestion de stock et mise en rayon des produits.</li>
-                    <li>Rigueur et rapidité d'exécution.</li>
+                    <li><strong>Rigueur et rapidité d'exécution.</strong></li>
                 </ul>
             </section>
 
