--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <div class="cv-main-content">
 
-            <h2><a href="formations.html">FORMATIONS</a></h2> <section class="cv-item">
+            <h2><a href="formations.html" style="color: rgb(3, 3, 48);"> FORMATIONS</a></h2> <section class="cv-item">
                 <h3>3eme année en école d'ingénieurs <strong> informatique </strong> - EPITA</h3>
                 <div class="item-details">
                     <span class="location">Villejuif</span>
@@ -137,7 +137,7 @@
                 </ul>
             </section>
             
-            <h2><a href="projets.html">PROJETS</a> </h2>
+            <h2><a href="projets.html" style="color: rgb(3, 3, 48);">PROJETS</a> </h2>
             <section class="cv-item">
                 <h3>Projet jeu vidéo</h3>
                 <div class="item-details">
@@ -168,7 +168,7 @@
                     <li>Projet logiciel de recettes de cuisine (ATU Sligo)</li>
                 </ul>
             </section>
-            <h2><a href="experiences.html">EXPÉRIENCE PROFESSIONNELLE</a> </h2>
+            <h2><a href="experiences.html" style="color: rgb(3, 3, 48);">EXPÉRIENCE PROFESSIONNELLE</a> </h2>
 
             <section class="cv-item">
                 <h3>Stage Data Science - ArtMajeur</h3>
@@ -207,7 +207,7 @@
                 </ul>
             </section>
 
-            <h2><a href="vie-associative.html">VIE ASSOCIATIVE</a> </h2>
+            <h2><a href="vie-associative.html" style="color: rgb(3, 3, 48);">VIE ASSOCIATIVE</a> </h2>
 
             <section class="cv-item">
                 <h3>Animatrice (Bénévolat) - Scout et Guide de France</h3>
@@ -222,9 +222,9 @@
             </section>
 
             <section class="cv-item">
-                <h3>Staff' Communication - EPITA</h3>
+                <h3>Staff' Communication</h3>
                 <div class="item-details">
-                    <span class="location"></span>
+                    <span class="location">EPITA, Le Kremlin-Bicêtre</span>
                     <span class="date">2025- </span>
                 </div>
                 <ul>
@@ -236,7 +236,7 @@
             <section class="cv-item">
                 <h3>Membre de La cave - Association de vins et de produits du terroir français</h3>
                 <div class="item-details">
-                    <span class="location"></span>
+                    <span class="location">EPITA, Le Kremlin-Bicêtre</span>
                     <span class="date">2024- </span>
                 </div>
                 <ul>
