--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <div class="cv-sidebar">
 
             <div class="cv-photo-container">
-                            </div>
+            <img src="assets/Images/Photo_CV.png" class="cv-photo">
+        </div>
 
             <h2>CONTACT</h2>
             <ul class="contact-block">
@@ -99,11 +100,16 @@
                 <li style="margin-left: 1rem; list-style: none;">(TryHackMe , HackTheBox , RootMe , HackThisSite )</li>
                 <li>Photographie, Voyage, Rugby, Œnologie, Surf  53]</li>
             </ul>
+
+            <h2>VERSIONS PDF</h2>
+        <ul class="contact-block">
+            <li><span class="contact-icon">📄</span> <a href="assets/Docs/CV Celia BOCAGE.pdf" download="CV_Celia_Bocage">Télécharger mon CV VF(PDF)</a></li>
+        </ul>
         </div>
 
         <div class="cv-main-content">
 
-            <h2><a href="formations.html" style="color: rgb(3, 3, 48);"> FORMATIONS</a></h2> <section class="cv-item">
+            <h2><a href="formations.html" style="color: rgb(57, 57, 105);"> FORMATIONS</a></h2> <section class="cv-item">
                 <h3>3eme année en école d'ingénieurs <strong> informatique </strong> - EPITA</h3>
                 <div class="item-details">
                     <span class="location">Villejuif</span>
@@ -137,7 +143,7 @@
                 </ul>
             </section>
             
-            <h2><a href="projets.html" style="color: rgb(3, 3, 48);">PROJETS</a> </h2>
+            <h2><a href="projets.html" style="color: rgb(57, 57, 105);">PROJETS</a> </h2>
             <section class="cv-item">
                 <h3>Projet jeu vidéo</h3>
                 <div class="item-details">
@@ -168,7 +174,7 @@
                     <li>Projet logiciel de recettes de cuisine (ATU Sligo)</li>
                 </ul>
             </section>
-            <h2><a href="experiences.html" style="color: rgb(3, 3, 48);">EXPÉRIENCE PROFESSIONNELLE</a> </h2>
+            <h2><a href="experiences.html" style="color: rgb(57, 57, 105);">EXPÉRIENCE PROFESSIONNELLE</a> </h2>
 
             <section class="cv-item">
                 <h3>Stage Data Science - ArtMajeur</h3>
@@ -207,7 +213,7 @@
                 </ul>
             </section>
 
-            <h2><a href="vie-associative.html" style="color: rgb(3, 3, 48);">VIE ASSOCIATIVE</a> </h2>
+            <h2><a href="vie-associative.html" style="color: rgb(57, 57, 105);">VIE ASSOCIATIVE</a> </h2>
 
             <section class="cv-item">
                 <h3>Animatrice (Bénévolat) - Scout et Guide de France</h3>
