--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             
             <h2><a href="passions.html" style="color: #66c7f4;">PASSIONS</a> </h2>
             <ul class="cv-list contact-block">
-                <li>Apprentissage autonome de la cybersécurité </li>
+                <li>Apprentissage autonome de la cybersécurité : </li>
                 <li style="margin-left: 1rem; list-style: none;">(TryHackMe , HackTheBox , RootMe , HackThisSite )</li>
-                <li>Photographie, Voyage, Rugby, Œnologie, Surf  53]</li>
+                <li>Photographie, Voyage, Rugby, Œnologie, Surf </li>
             </ul>
 
             <h2>VERSIONS PDF</h2>
