--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <section class="cv-item">
                 <h3>Animatrice (Bénévolat) - Scout et Guide de France</h3>
                 <div class="item-details">
-                    <span class="location"></span>
+                    <span class="location">Gaillac</span>
                     <span class="date">2023- </span>
                 </div>
                 <ul>
