--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <header>
     <div class="logo">Célia Bocage</div>
     <div class="subtitle">Étudiante en ingénierie informatique – EPITA</div>
-    <p class="tagline" style="color: aliceblue;"> N'hésitez pas a cliquer sur les experiences ou les projets pour en savoir plus</p>
+    <p class="tagline" style="color: aliceblue;"> N'hésitez pas à cliquer sur les experiences ou les projets pour en savoir plus</p>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="formations.html">Formations</a></li>
-        <li><a href="experiences.html">Expériences</a></li>
-        <li><a href="projets.html">Projets</a></li>
-        <li><a href="vie-associative.html">Vie associative</a></li>
-        <li><a href="passions.html">Passions</a></li>
+        <li><a href="navigation/formations.html">Formations</a></li>
+        <li><a href="navigation/experiences.html">Expériences</a></li>
+        <li><a href="navigation/passions.html">Projets</a></li>
+        <li><a href="navigation/vie-associative.html">Vie associative</a></li>
+        <li><a href="navigation/passions.html">Passions</a></li>
       </ul>
     </nav>
   </header>
 
 <main>
     <h1>CÉLIA BOCAGE</h1>
-    <p class="tagline cv-title-info">Étudiante à l'EΡITA | Recherche d'stage en cybersécurité (fev. - juil. 2026)</p>
+    <p class="tagline cv-title-info">Étudiante à l'EΡITA | Recherche de stage en cybersécurité (fev. - juil. 2026)</p>
 
     <section style="margin-bottom: 2rem;">
         <p style="color: #222;">
@@ -94,7 +94,7 @@
             </ul>
 
             
-            <h2><a href="passions.html" style="color: #66c7f4;">PASSIONS</a> </h2>
+            <h2><a href="navigation/passions.html" style="color: #66c7f4;">PASSIONS</a> </h2>
             <ul class="cv-list contact-block">
                 <li>Apprentissage autonome de la cybersécurité : </li>
                 <li style="margin-left: 1rem; list-style: none;">(TryHackMe , HackTheBox , RootMe , HackThisSite )</li>
@@ -109,7 +109,7 @@
 
         <div class="cv-main-content">
 
-            <h2><a href="formations.html" style="color: rgb(57, 57, 105);"> FORMATIONS</a></h2> <section class="cv-item">
+            <h2><a href="navigation/formations.html" style="color: rgb(57, 57, 105);"> FORMATIONS</a></h2> <section class="cv-item">
                 <h3>3eme année en école d'ingénieurs <strong> informatique </strong> - EPITA</h3>
                 <div class="item-details">
                     <span class="location">Villejuif</span>
@@ -143,7 +143,7 @@
                 </ul>
             </section>
             
-            <h2><a href="projets.html" style="color: rgb(57, 57, 105);">PROJETS</a> </h2>
+            <h2><a href="navigation/passions.html" style="color: rgb(57, 57, 105);">PROJETS</a> </h2>
             <section class="cv-item">
                 <h3>Projet jeu vidéo</h3>
                 <div class="item-details">
@@ -174,7 +174,7 @@
                     <li>Projet logiciel de recettes de cuisine (ATU Sligo)</li>
                 </ul>
             </section>
-            <h2><a href="experiences.html" style="color: rgb(57, 57, 105);">EXPÉRIENCE PROFESSIONNELLE</a> </h2>
+            <h2><a href="navigation/experiences.html" style="color: rgb(57, 57, 105);">EXPÉRIENCE PROFESSIONNELLE</a> </h2>
 
             <section class="cv-item">
                 <h3>Stage Data Science - ArtMajeur</h3>
@@ -213,7 +213,7 @@
                 </ul>
             </section>
 
-            <h2><a href="vie-associative.html" style="color: rgb(57, 57, 105);">VIE ASSOCIATIVE</a> </h2>
+            <h2><a href="navigation/vie-associative.html" style="color: rgb(57, 57, 105);">VIE ASSOCIATIVE</a> </h2>
 
             <section class="cv-item">
                 <h3>Animatrice (Bénévolat) - Scout et Guide de France</h3>
