--- a/navigation/formations.html
+++ b/navigation/formations.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Célia Bocage – Projets</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Célia Bocage – Formations</title>
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
 <div class="site-wrapper">
@@ -33,7 +33,7 @@
   </div>
 
   <main>
-    <h1>Projets</h1>
+    <h1>Formations</h1>
 
     <!-- Ici tu mets le détail de tes formations, à partir du CV -->
   </main>
