--- a/navigation/passions.html
+++ b/navigation/passions.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Célia Bocage – Vie Associative</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Célia Bocage – Passions</title>
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
 <div class="site-wrapper">
@@ -26,14 +26,14 @@
   <div class="contact-bar">
     <span>Me contacter :</span>
     <div class="contact-links">
-      <a href="mailto:celia.bocage.pro@gmail.com">📧 Email</a>
-      <a href="www.linkedin.com/in/célia-bocage-549b082ab" target="_blank" rel="noopener">🔗 LinkedIn</a>
-      <a href="https://github.com/CeliaBocage" target="_blank" rel="noopener">💻 GitHub</a>
+      <a href="mailto:ton.email@exemple.com">📧 Email</a>
+      <a href="https://www.linkedin.com/in/ton-profil" target="_blank" rel="noopener">🔗 LinkedIn</a>
+      <a href="https://github.com/ton-github" target="_blank" rel="noopener">💻 GitHub</a>
     </div>
   </div>
 
   <main>
-    <h1>Vie Associative</h1>
+    <h1>Passions</h1>
 
     <!-- Ici tu mets le détail de tes formations, à partir du CV -->
   </main>
