--- a/navigation/experiences.html
+++ b/navigation/experiences.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Célia Bocage – Experiences</title>
+  <title>Célia Bocage – Expériences</title>
   <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
@@ -33,9 +33,46 @@
   </div>
 
   <main>
-    <h1>Experiences</h1>
+    <h1>Expériences Professionnelles</h1>
 
-    <!-- Ici tu mets le détail de tes formations, à partir du CV -->
+    <div class="experience-grid">
+        <section class="experience-card">
+            <h2 class="card-title">Stage Data Science - ArtMajeur</h2>
+            <div class="card-details">
+                <span class="location">Levallois-Perret</span>
+                <span class="date">2023 - 4 mois</span>
+            </div>
+            <ul class="card-description">
+                <li>Analyse data & comportements : SQL, Python, statistiques.</li>
+                <li>Modélisation & sémantique : classification, BERT.</li>
+                <li>Visualisation & impact : dashboards, rapports, optimisation data-driven.</li>
+            </ul>
+        </section>
+
+        <section class="experience-card">
+            <h2 class="card-title">Commis de salle - Hôtel Eldorado, 4*</h2>
+            <div class="card-details">
+                <span class="location">Paris 18</span>
+                <span class="date">3 mois</span>
+            </div>
+            <ul class="card-description">
+                <li>Mise en place autonome, polyvalence.</li>
+                <li>Adaptabilité dans un environnement dynamique.</li>
+            </ul>
+        </section>
+
+        <section class="experience-card">
+            <h2 class="card-title">Réceptionniste - Pharmacie de Piquerouge</h2>
+            <div class="card-details">
+                <span class="location">Gaillac</span>
+                <span class="date">7 mois</span>
+            </div>
+            <ul class="card-description">
+                <li>Réception, gestion de stock et mise en rayon des produits.</li>
+                <li>Rigueur et rapidité d'exécution.</li>
+            </ul>
+        </section>
+    </div>
   </main>
 
   <footer>
@@ -48,4 +85,3 @@
 </script>
 </body>
 </html>
-
