--- a/navigation/passions.html
+++ b/navigation/passions.html
@@ -13,7 +13,7 @@
     <div class="subtitle">Étudiante en ingénierie informatique – EPITA</div>
     <nav>
       <ul>
-        <li><a href="index.html">Accueil</a></li>
+        <li><a href="../index.html">Accueil</a></li>
         <li><a href="formations.html">Formations</a></li>
         <li><a href="experiences.html">Expériences</a></li>
         <li><a href="projets.html">Projets</a></li>
