--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="content-area">
             <main>
                 <h1>CÉLIA BOCAGE</h1>
-                <p class="tagline cv-title-info">Étudiante à l'EΡITA | Recherche de stage en cybersécurité (fev. - juil. 2026)</p>
+                <p class="tagline cv-title-info">Étudiante à l'EΡITA | Recherche d'alternance en cybersécurité (sept. 2026 - juil. 2029)</p>
                 <section style="margin-bottom: 2rem;">
                     <p style="color: #222;">
                         Passionnée de cybersécurité, j'analyse et teste des systèmes via des projets, du pentest et des CTF.
-                        Active sur TryHackMe et HackTheBox, je recherche un stage en sécurité offensive, SOC ou analyse de vulnérabilités.
+                        Active sur TryHackMe et HackTheBox, je recherche une alternance en sécurité offensive, SOC ou analyse de vulnérabilités.
                     </p>
                 </section>
 
@@ -142,6 +142,9 @@
                             </div>
                             <ul>
                                 <li>Projet jeu vidéo (2e semestre EPITA)</li>
+                                <li>Modélisation d'une carte de jeu 3D avec le logiciel Blender</li>
+                                <li>Confection d'un menu de changement de commande en C# a l'aide json</li>
+                                <li>Familiarisation avec un logiciel de creation de jeux video comme Godot</li>
                             </ul>
                         </section>
                         <section class="cv-item">
