--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
                             </ul>
                         </section>
                         <section class="cv-item">
+                            <h3>Semestre a l'etranger : <strong>Game Design</strong> - ATU</h3>
+                            <div class="item-details">
+                                <span class="location">Sligo, Irlande</span>
+                                <span class="date">jan. 2025 - juin 2025</span>
+                            </div>
+                        </section>
+                        <section class="cv-item">
                             <h3>BAFA</h3>
                             <div class="item-details">
                                 <span class="location">Gaillac</span>
