--- a/navigation/passions.html
+++ b/navigation/passions.html
@@ -1,42 +1,55 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Célia Bocage – Passions</title>
-  <link rel="stylesheet" href="../assets/css/style.css">
-</head>
-<body>
-<div class="site-wrapper">
-  <header>
-    <div class="logo">Célia Bocage</div>
-    <div class="subtitle">Étudiante en ingénierie informatique – EPITA</div>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Accueil</a></li>
-        <li><a href="formations.html">Formations</a></li>
-        <li><a href="experiences.html">Expériences</a></li>
-        <li><a href="projets.html">Projets</a></li>
-        <li><a href="vie-associative.html">Vie associative</a></li>
-        <li><a href="passions.html">Passions</a></li>
-      </ul>
-    </nav>
-  </header>
+<main>
+    <h1>Passions & Centres d'intérêt</h1>
 
-  <main>
-    <h1>Passions</h1>
+    <div class="page-intro-details">
+        <p class="intro-summary">Développement de compétences en autodidacte et activités extra-scolaires.</p>
+    </div>
 
-    <!-- Ici tu mets le détail de tes formations, à partir du CV -->
-  </main>
+    <div class="experience-grid">
+        <section class="experience-card">
+            <div class="card-header">
+                <h2 class="card-title">Cybersécurité en autodidacte</h2>
+                <div class="card-details-wrapper">
+                    <span class="location">Plateformes en ligne</span>
+                    <span class="date">Continu</span>
+                </div>
+            </div>
+            <div class="card-content">
+                <ul class="card-description">
+                    <li>Analyse et test de systèmes via des environnements dédiés.</li>
+                    <li>Pratique régulière de CTF (Capture The Flag) pour le développement de compétences offensives.</li>
+                    <li>Résolution de challenges sur diverses plateformes spécialisées.</li>
+                </ul>
+            </div>
+            <div class="chips-footer">
+                <span class="chip">TryHackMe</span>
+                <span class="chip">HackTheBox</span>
+                <span class="chip">RootMe</span>
+                <span class="chip">HackThisSite</span>
+            </div>
+        </section>
 
-  <footer>
-    © <span id="year"></span> Célia Bocage
-  </footer>
-</div>
-
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-</script>
-</body>
-</html>
-
+        <section class="experience-card">
+            <div class="card-header">
+                <h2 class="card-title">Activités & Loisirs</h2>
+                <div class="card-details-wrapper">
+                    <span class="location">Divers</span>
+                    <span class="date">Personnel</span>
+                </div>
+            </div>
+            <div class="card-content">
+                <ul class="card-description">
+                    <li>Photographie et voyages.</li>
+                    <li>Sport : Pratique du Rugby et du Surf.</li>
+                    <li>Œnologie : Membre actif de l'association "La Cave".</li>
+                </ul>
+            </div>
+            <div class="chips-footer">
+                <span class="chip">Photographie</span>
+                <span class="chip">Rugby</span>
+                <span class="chip">Voyage</span>
+                <span class="chip">Surf</span>
+            </div>
+        </section>
+    </div>
+</main>
