--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
 </head>
 <body>
     <div class="site-wrapper">
-        <header>
-            <div class="logo">Célia Bocage</div>
-            <div class="subtitle">Étudiante en ingénierie informatique – EPITA</div>
-            <p class="tagline" style="color: aliceblue;">N'hésitez pas à cliquer sur les experiences ou les projets pour en savoir plus</p>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="navigation/formations.html">Formations</a></li>
-                    <li><a href="navigation/experiences.html">Expériences</a></li>
-                    <li><a href="navigation/passions.html">Projets</a></li>
-                    <li><a href="navigation/vie-associative.html">Vie associative</a></li>
-                    <li><a href="navigation/passions.html">Passions</a></li>
-                </ul>
-            </nav>
-        </header>
+<header>
+    <div class="logo">Célia Bocage</div>
+    <div class="subtitle">Étudiante en ingénierie informatique – EPITA</div>
+    
+    <button class="menu-toggle" aria-label="Menu">☰ Menu</button>
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+             </ul>
+    </nav>
+</header>
 
         <div class="content-area">
             <main>
@@ -254,5 +250,27 @@
             </footer>
         </div>
     </div>
+    <script>
+
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    document.addEventListener('DOMContentLoaded', function() {
+        const toggleButton = document.querySelector('.menu-toggle');
+        const navList = document.querySelector('nav ul');
+
+        if (toggleButton && navList) {
+            toggleButton.addEventListener('click', function() {
+
+                navList.classList.toggle('open');
+                
+                if (navList.classList.contains('open')) {
+                    toggleButton.textContent = "✕ Fermer";
+                } else {
+                    toggleButton.textContent = "☰ Menu";
+                }
+            });
+        }
+    });
+</script>
 </body>
 </html>
